--- a/constants.yaml
+++ b/constants.yaml
@@ -1,5 +1,20 @@
-Constants:
+General:
   - step: 0.125
   - seed: 10
   - file_path: "utils/DIV66_BMI0_g.txt"
-  
+  - number_of_Nodes: 4095
+  - c1: 0.04
+  - c2: 5
+  - c3: 140
+  - c4: -1
+  - c5: 1
+INHIBIT:
+  - a: 0.1
+  - b: 0.2
+  - c: -65.0
+  - d: 2
+EXCITED:
+  - a: 0.02
+  - b: 0.2
+  - c: -65.0
+  - d: 8
