--- a/constants.yaml
+++ b/constants.yaml
@@ -6,16 +6,18 @@ general:
   c4: -1
   c5: 1
 NeuronNetwork:
-  dt: 0.125
   initLowBound: -10
   initUpBound: 10
-  totalTime: 7500
   seed: 10
+NeuronNetworkTimeSeries:
+  totalTime: 7500
+  dt: 0.125
   c1: 0.04
   c2: 5
   c3: 140
   c4: -1
   c5: 1
+
 INHIBIT:
   a: 0.1
   b: 0.2
