--- a/constants.yaml
+++ b/constants.yaml
@@ -2,6 +2,18 @@ NeuronNetwork:
   initLowBound: -10
   initUpBound: 10
   seed: 10
+  maxSpike: 2000
+  sigma: 3
+  INHIBIT:
+    a: 0.1
+    b: 0.2
+    c: -65.0
+    d: 2
+  EXCITED:
+    a: 0.02
+    b: 0.2
+    c: -65.0
+    d: 8
 NeuronNetworkTimeSeries:
   max_v: 30
   dt: 0.125
@@ -15,17 +27,6 @@ NeuronNetworkTimeSeries:
   tauExc: 5
   tauInh: 6
   beta: 2
-  maxSpike: 2000
-  INHIBIT:
-    a: 0.1
-    b: 0.2
-    c: -65.0
-    d: 2
-  EXCITED:
-    a: 0.02
-    b: 0.2
-    c: -65.0
-    d: 8
 Main:
   totalTime: 7500
   file_path: "DIV66_BMI0_g.txt"
